# framedot

./: .gitignore  CMakeLists.txt  run.sh
cmake/: framedotConfig.cmake.in  framedotConfig.hpp.in  framedotInstall.cmake  framedotOptions.cmake  framedotWarnings.cmake
cmake/toolchains/: clang.cmake
examples/: CMakeLists.txt
examples/smoke/: CMakeLists.txt
examples/smoke/src/: main.cpp
include/framedot/: framedot.hpp
include/framedot/app/: RunLoop.hpp
include/framedot/core/: FrameContext.hpp  JobSystem.hpp  Tasks.hpp  Version.hpp
include/framedot/ecs/: Fecs.hpp  World.hpp
include/framedot/ecs/components/: Basic2D.hpp
include/framedot/ecs/systems/: RenderPrep2D.hpp
include/framedot/gfx/: Color.hpp  PixelCanvas.hpp  PixelFrame.hpp  RenderQueue.hpp  SoftwareRenderer.hpp
include/framedot/input/: Event.hpp  InputCollector.hpp  InputQueue.hpp  InputSource.hpp  InputState.hpp  Key.hpp
include/framedot/math/: Fml.hpp  Types.hpp
include/framedot/rhi/: Surface.hpp
include/framedot/text/: GlyphRun.hpp  TextEngine.hpp  TextTypes.hpp
include/framedot_internal/core/: DefaultJobSystem.hpp
internal/framedot_internal/core/: DefaultJobSystem.hpp
internal/framedot_internal/text/: HarfBuzzBackend.hpp
src/: CMakeLists.txt
src/app/: run_loop.cpp
src/core/: job_system.cpp  version.cpp
src/ecs/: world.cpp
src/gfx/: pixel_canvas.cpp  software_renderer.cpp
src/text/: harfbuzz_backend.cpp  text_engine.cpp
tests/: CMakeLists.txt  test_sanity.cpp
